[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/fonts/ui_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://resources/fonts/Comfortaa-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/ui/in_game_ui.gd" type="Script" id=3]
[ext_resource path="res://resources/back.png" type="Texture" id=4]
[ext_resource path="res://resources/restart.png" type="Texture" id=5]
[ext_resource path="res://src/ui/common/loading_indicator.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="InGameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 90.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 560.0
margin_bottom = 70.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 91.0
margin_bottom = 70.0
mouse_filter = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 91.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.501961 )
text = "Level: 3"

[node name="VBoxContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 95.0
margin_right = 95.0
margin_bottom = 70.0
mouse_filter = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 99.0
margin_right = 480.0
margin_bottom = 70.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
margin_right = 381.0
margin_bottom = 28.0
mouse_filter = 2

[node name="TimerLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/CenterContainer"]
margin_left = 140.0
margin_right = 240.0
margin_bottom = 28.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.501961 )
text = "55:55:55"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 32.0
margin_right = 381.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.501961 )
text = "Moves: 0"
align = 1

[node name="RestartButton" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 484.0
margin_right = 560.0
margin_bottom = 70.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 2 )
icon = ExtResource( 5 )
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -90.0
margin_right = -20.0
margin_bottom = -20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
margin_right = 560.0
margin_bottom = 70.0
mouse_filter = 2

[node name="BackButton" type="Button" parent="MarginContainer2/HBoxContainer"]
margin_right = 76.0
margin_bottom = 70.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 3 )
icon = ExtResource( 4 )
flat = true

[node name="LoadingIndicator" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="MarginContainer/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
